fullSandbox11072023/force-app/main/default/objects/TAM__c/TAM__c.object-meta.xml
<CustomObject>
    <description>Total Airway Management (TAM ) SFDC profile</description>
    <label>TAM</label>
    <nameField>
        <displayFormat>TAM-{0000}</displayFormat>
        <label>TAM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>