fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <formula>IF(
 Total_Airway_Management_Spend__c &gt;= 250000,
 &quot;A&quot;,
IF(
 AND(
 Total_Airway_Management_Spend__c &lt; 250000,
 Total_Airway_Management_Spend__c &gt;= 100000
 ),
 &quot;B&quot;,
 IF(
 Total_Airway_Management_Spend__c  &lt;= 100000,
 &quot;C&quot;,
 NULL
 )
 )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>