fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Anesthesia_Clinical_Champion__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia_Clinical_Champion__c</fullName>
    <label>Anesthesia Clinical Champion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>