fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Clinical_Champion_2__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion_2__c</fullName>
    <label>Clinical Champion #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>