fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Definitive_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_ID__c</fullName>
    <description>Captures Definitive ID from Definitive health care DB</description>
    <label>Definitive ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>