fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Est_of_Total_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Est_of_Total_Surgeries__c</fullName>
    <label>Est. # of Total Surgeries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>