fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Estimated_Potential_LMA_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Potential_LMA_Spend__c</fullName>
    <formula>Number_of_Staffed_Beds__c * 100</formula>
    <label>Estimated Potential LMA Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>