fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Number_of_Operating_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Operating_Rooms__c</fullName>
    <label>Number of Operating Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>