fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Primary_ETT_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_ETT_Vendor__c</fullName>
    <label>Primary ETT Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>