fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Primary_SU_laryngoscope_vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_SU_laryngoscope_vendor__c</fullName>
    <label>Primary SU laryngoscope vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>