fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Quarterly_Target__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Target</label>
    <type>Checkbox</type>
</CustomField>