fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>TextArea</type>
</CustomField>