fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Rolling_12_Month_Sales_Laryngoscope__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Month_Sales_Laryngoscope__c</fullName>
    <label>Rolling 12 Month Sales ($) Laryngoscope</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>