fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Rolling_12_Month_Sales_TAM__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Month_Sales_TAM__c</fullName>
    <formula>Rolling_12_Month_Sales_Laryngoscope__c +  Rolling_12_Month_Sales_ETT_EBT__c +  Rolling_12_Month_Sales_LMA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolling 12 Month Sales ($) TAM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>