fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>TextArea</type>
</CustomField>