fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/SAP_CODE__c.field-meta.xml
<CustomField>
    <fullName>SAP_CODE__c</fullName>
    <label>SAP_CODE</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>