fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/TAM_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TAM_Account_Name__c</fullName>
    <formula>&apos;TAM-&apos;+ Account_Name__r.Name</formula>
    <label>TAM Account Name</label>
    <type>Text</type>
</CustomField>