fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Teaching_Status__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teaching Status</label>
    <type>Checkbox</type>
</CustomField>