fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Total_Airway_Management_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Airway_Management_Spend__c</fullName>
    <formula>Estimated_Potential_Laryngoscopes_Spend__c  +  Estimated_Potential_ETT_EBT_Spend__c  +  Estimated_Potential_LMA_Spend__c</formula>
    <label>Total Airway Management Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>