fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/X12_Month_Account_Saturation_ETT_EBT__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Account_Saturation_ETT_EBT__c</fullName>
    <formula>Rolling_12_Month_Sales_ETT_EBT__c  /  Estimated_Potential_ETT_EBT_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Account Saturation ETT / EBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>