fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/X12_Month_Account_Saturation_Laryngoscop__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Account_Saturation_Laryngoscop__c</fullName>
    <formula>Rolling_12_Month_Sales_Laryngoscope__c/Estimated_Potential_Laryngoscopes_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 Month Account Saturation Laryngoscope</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>