fullSandbox11072023/force-app/main/default/objects/TAM__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>MID( Account_Name__r.BillingPostalCode, 0, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>